fix(style): add gap and max width for items. Remove unnecesary code

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -29,10 +29,16 @@ img {
 
 .title {
   text-align: center;
+  padding-bottom: 32px;
 }
 
 .items-container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  gap: 52px;
+}
+
+.item {
+  max-width: 200px;
+  text-align: center;
 }
